@@ -1,3 +1,8 @@
+2008-02-08  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Make the history timestamp recognition more fault
+	tolerant and read the ISO8601 format 
+
 2008-02-06  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Addded an option to leave the enter/exit messages
